Moving resources from Wordpress site and added portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,10 @@ group: navigation
 {% include JB/setup %}
 
 <ul>
-	<li><a href='/portfolio/startups2students.html'>Startups2Students</a></li>
+	<li><a href='/portfolio/startups2students.html'>Startups2Students: Bringing the World of Entrepreneurs to CU Boulder</a></li>
 	<li><a href='/portfolio/startupcommunities.html'>Startup Communities</a></li>
+	<li><a href='/portfolio/waldo.html'>Waldo: Intelligent Call Handler</a></li>
+	<li><a href='/portfolio/inthenews.html'>In the News: A Collection of Featured Articles</a></li>
+	<li><a href='/portfolio/launchpad.html'>LaunchPad</a></li>
 </ul>
 
