--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title : Blog Archive
 group: navigation
+weight: 3
 ---
 {% include JB/setup %}
 
