SEO improvements. Added description and new title logic.

--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title : Blog Archive
+description: "An archive of blogs written by Ben Limmer"
 group: navigation
 weight: 3
 ---
