--- a/tags.html
+++ b/tags.html
@@ -13,7 +13,7 @@ published: false
 
 
 {% for tag in site.tags %} 
-  <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
+  <h2 class="anchor-fix" id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
     {% assign pages_list = tag[1] %}  
     {% include JB/pages_list %}
