--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <h2>Recent Blog Posts</h2>
+  <h1 class="headline">Recent Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts limit:10 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
