Fix broken .html links.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
     {% endfor %}
     <div class="more">
-      <a href="/archive.html">More...</a>
+      <a href="/archive">More...</a>
     </div>
   </ul>
 </div>
