resolve soft 404 google sitemap warning

--- a/missing.html
+++ b/missing.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: 404 - Page Not Found
+sitemap: false
 ---
 <div class="center">
 	<img src="/assets/images/pages/404.png" alt="Move along, nothing to see here" width="600" height="385" />
