--- a/missing.html
+++ b/missing.html
@@ -1,8 +1,13 @@
 ---
 layout: page
-title: 404 - Page Not Found
+title: 404
 sitemap: false
 ---
-<div class="center">
-	<img src="/assets/images/pages/404.png" alt="Move along, nothing to see here" width="600" height="385" />
-</div>
+
+<p>Whoops, the link you tried to visit is not valid.</p>
+<p>
+  If this is unexpected, please <a href="https://github.com/blimmer/benlimmer.com/issues/new">open an issue</a> to let
+  me know.
+</p>
+
+<a class="btn btn-large btn-info" href="/">Go back to homepage</a>
