--- a/tags.html
+++ b/tags.html
@@ -4,19 +4,23 @@ title: Tags
 header: Posts By Tag
 ---
 
-{% for tag in site.tags %}
-  {% assign t = tag | first %}
-  {% assign posts = tag | last %}
+{% assign sortedTags = site.tags | sort %}
 
-{{ t | downcase }}
-<ul>
-{% for post in posts %}
-  {% if post.tags contains t %}
+<div class="tag-list">
+  {% for tag in sortedTags %}
+  <a href="#{{ tag[0] | replace: " ", "-" }}">{{ tag[0] }}&nbsp;({{ tag[1] | size }})</a>
+  {% endfor %}
+</div>
+
+{% for tag in sortedTags %}
+
+<section class="posts-by-tag">
+  <h2 id="{{ tag[0] | replace: " ", "-" }}" class="anchor-fix">{{ tag[0] }}</h2>
+
+  {% for post in tag[1] %}
   <li>
     <a href="{{ post.url }}">{{ post.title }}</a>
-    <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
+    <span class="date">{{ post.date | date: "%B %-d, %Y" }}</span>
   </li>
-  {% endif %}
-{% endfor %}
-</ul>
-{% endfor %}
+  {% endfor %} {% endfor %}
+</section>
