--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
 <div class="home">
+  <h1 class="headline">📌 Popular Posts</h1>
+  <ul class="posts">
+    {% assign pinned_posts = site.posts | where: "pinned",true %} {% for post in pinned_posts %}
+    <li>
+      &raquo;
+      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
   <h1 class="headline">Recent Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts limit:10 %}
